--- a/3kh0-assets-main-ctr/ctr/index.html
+++ b/3kh0-assets-main-ctr/ctr/index.html
@@ -189,5 +189,12 @@
         </div>
     </div>
   </div>
+	        <script>
+document.addEventListener('keydown', function(event) {
+    if (event.key.toLowerCase() === 'b') {
+        window.location.href = 'https://fatty.neocities.org/other';
+    }
+});
+</script>
 </body>
 </html>
